[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sum-pai"
version = "0.3.0"
authors = [
  { name="Bill Schumacher", email="34168009+BillSchumacher@users.noreply.github.com" },
]
description = "A Python library for cataloging and searching python files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["build", "setuptools", "twine", "wheel", "openai", "loguru", "click",
 "python-dotenv", "black", "isort", "pytest", "tenacity","tiktoken", "cityhash", "numpy",
 "scikit-learn"]

[project.scripts]
sum_pai = "sum_pai.__main__:main"
create_search_embedding = "sum_pai.create_search_embedding:main"
search_project = "sum_pai.search_project:main"

[tool.hatch.build]
exclude = [
  "*.txt",
  ".env",
  ".env*",
  "*.env",
  "*venv*",
  "tests/*",
  "docs/*",
  "examples/*",
  "scripts/*",
  "data/*",
  "node_modules/*",
  "**/node_modules/*",
  "**/*.sumpai",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"bin/sum_pai.py" = "src/sum_pai/__main__.py"
"bin/create_search_embedding.py" = "src/sum_pai/create_search_embedding.py"
"bin/search_project.py" = "src/sum_pai/search_project.py"

[project.urls]
"Homepage" = "https://github.com/BillSchumacher/SumPAI"
"Bug Tracker" = "https://github.com/BillSchumacher/SumPAI"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"